--- a/GemStone/en.lproj/MainMenu.xib
+++ b/GemStone/en.lproj/MainMenu.xib
@@ -30,6 +30,7 @@
                 <outlet property="infoPanel" destination="13268" id="13270"/>
                 <outlet property="infoPanelTextView" destination="13272" id="13301"/>
                 <outlet property="ipAddress" destination="n8V-8k-z0U" id="wZj-xp-Bgc"/>
+                <outlet property="lastUpdateDateField" destination="9Rt-01-td9" id="TH2-Nq-YA6"/>
                 <outlet property="logFileListController" destination="10039" id="10041"/>
                 <outlet property="oldLogFilesText" destination="11090" id="11582"/>
                 <outlet property="oldTranLogsText" destination="11176" id="11583"/>
@@ -867,7 +868,7 @@ Gw
                         <font key="font" metaFont="system"/>
                         <tabViewItems>
                             <tabViewItem label="Setup" identifier="1" id="1733" userLabel="Setup Tab">
-                                <view key="view" ambiguous="YES" id="1736">
+                                <view key="view" id="1736">
                                     <rect key="frame" x="10" y="33" width="594" height="409"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -970,14 +971,14 @@ Gw
                                             </view>
                                         </box>
                                         <box fixedFrame="YES" title="Hostname Lookup (Domain Name Service)" translatesAutoresizingMaskIntoConstraints="NO" id="XO9-sd-A4V">
-                                            <rect key="frame" x="6" y="125" width="582" height="114"/>
+                                            <rect key="frame" x="6" y="160" width="582" height="79"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <view key="contentView" id="0Q3-Qc-7Dj">
-                                                <rect key="frame" x="2" y="2" width="578" height="97"/>
+                                                <rect key="frame" x="2" y="2" width="578" height="62"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWy-d9-pR5">
-                                                        <rect key="frame" x="18" y="60" width="70" height="17"/>
+                                                        <rect key="frame" x="18" y="25" width="70" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Hostname:" id="n20-iF-iDf">
                                                             <font key="font" metaFont="system"/>
@@ -986,7 +987,7 @@ Gw
                                                         </textFieldCell>
                                                     </textField>
                                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOL-nW-3Xc">
-                                                        <rect key="frame" x="94" y="55" width="135" height="22"/>
+                                                        <rect key="frame" x="94" y="20" width="135" height="22"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="BDI-Me-VEG">
                                                             <font key="font" metaFont="system"/>
@@ -995,7 +996,7 @@ Gw
                                                         </textFieldCell>
                                                     </textField>
                                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n8V-8k-z0U">
-                                                        <rect key="frame" x="314" y="55" width="113" height="22"/>
+                                                        <rect key="frame" x="314" y="20" width="113" height="22"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="255.255.255.255" drawsBackground="YES" id="9fc-D5-N8M">
                                                             <font key="font" metaFont="system"/>
@@ -1004,7 +1005,7 @@ Gw
                                                         </textFieldCell>
                                                     </textField>
                                                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xsY-qr-ERw">
-                                                        <rect key="frame" x="429" y="49" width="140" height="32"/>
+                                                        <rect key="frame" x="429" y="14" width="140" height="32"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <buttonCell key="cell" type="push" title="Add to /etc/hosts" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="y03-Tj-IHr">
                                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -1015,7 +1016,7 @@ Gw
                                                         </connections>
                                                     </button>
                                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjw-aV-VS8">
-                                                        <rect key="frame" x="235" y="58" width="73" height="17"/>
+                                                        <rect key="frame" x="235" y="23" width="73" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="IP Address:" id="3a2-Bj-UcJ">
                                                             <font key="font" metaFont="system"/>
@@ -1136,7 +1137,7 @@ Gw
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="Ltp-6P-yYt">
                                                 <rect key="frame" x="1" y="0.0" width="298" height="388"/>
-                                                <autoresizingMask key="autoresizingMask"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" headerView="6Hx-XL-Vno" id="DCE-ld-kz9" userLabel="Versions Table">
                                                         <rect key="frame" x="0.0" y="0.0" width="298" height="365"/>
@@ -1219,7 +1220,7 @@ Gw
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Databases" identifier="2" id="1734" userLabel="Database Tab">
-                                <view key="view" id="1735">
+                                <view key="view" ambiguous="YES" id="1735">
                                     <rect key="frame" x="10" y="33" width="594" height="409"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -1228,7 +1229,7 @@ Gw
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="B1y-Cj-MUF">
                                                 <rect key="frame" x="1" y="0.0" width="519" height="99"/>
-                                                <autoresizingMask key="autoresizingMask"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="8164" id="8162">
                                                         <rect key="frame" x="0.0" y="0.0" width="519" height="76"/>
@@ -1493,6 +1494,22 @@ Gw
                                                     </dictionary>
                                                 </binding>
                                                 <outlet property="nextKeyView" destination="8650" id="15378"/>
+                                            </connections>
+                                        </button>
+                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8650" userLabel="Stop Database Button">
+                                            <rect key="frame" x="511" y="266" width="72" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <buttonCell key="cell" type="push" title="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8651">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <connections>
+                                                <binding destination="8210" name="target" keyPath="selection" id="13254">
+                                                    <dictionary key="options">
+                                                        <string key="NSSelectorName">stopDatabase</string>
+                                                    </dictionary>
+                                                </binding>
+                                                <binding destination="8210" name="enabled" keyPath="selection.isRunningCode" id="dCp-l4-QNO"/>
                                             </connections>
                                         </button>
                                         <tabView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="11787" userLabel="Database Tabs">
@@ -1825,7 +1842,7 @@ Gw
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <clipView key="contentView" ambiguous="YES" id="vtt-4S-fJx">
                                                                     <rect key="frame" x="1" y="0.0" width="448" height="205"/>
-                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="9997" id="9995" userLabel="Process Logs">
                                                                             <rect key="frame" x="0.0" y="0.0" width="448" height="182"/>
@@ -2029,7 +2046,7 @@ Gw
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <clipView key="contentView" ambiguous="YES" id="llJ-p2-BqW">
                                                                     <rect key="frame" x="1" y="0.0" width="422" height="205"/>
-                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" autosaveColumns="NO" headerView="12969" id="12967" userLabel="Statmon Files">
                                                                             <rect key="frame" x="0.0" y="0.0" width="422" height="182"/>
@@ -2233,22 +2250,6 @@ Gw
                                                 </tabViewItem>
                                             </tabViewItems>
                                         </tabView>
-                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8650" userLabel="Stop Database Button">
-                                            <rect key="frame" x="511" y="266" width="72" height="32"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                            <buttonCell key="cell" type="push" title="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8651">
-                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                <font key="font" metaFont="system"/>
-                                            </buttonCell>
-                                            <connections>
-                                                <binding destination="8210" name="target" keyPath="selection" id="13254">
-                                                    <dictionary key="options">
-                                                        <string key="NSSelectorName">stopDatabase</string>
-                                                    </dictionary>
-                                                </binding>
-                                                <binding destination="8210" name="enabled" keyPath="selection.isRunningCode" id="dCp-l4-QNO"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                 </view>
                             </tabViewItem>
@@ -2262,7 +2263,7 @@ Gw
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="D5p-c6-Gf8">
                                                 <rect key="frame" x="1" y="0.0" width="558" height="399"/>
-                                                <autoresizingMask key="autoresizingMask"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" headerView="12781" id="12779">
                                                         <rect key="frame" x="0.0" y="0.0" width="558" height="376"/>
